--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam impedit quisquam ullam voluptatum rerum voluptate reiciendis neque, assumenda ut ab fugiat, perferendis tempora molestias commodi mollitia? Laboriosam laborum voluptate atque?</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <title>Correo</title>
+</head>
+<body>
+    <div class="container">
+        <form>     
+            <div class="form-group">
+                <label for="NumEmp">Numero de empleado</label>
+                <input type="text" class="form-control" id="txtNumEmp" placeholder="Ingresa numero de empleado">
+                <label for="NomEmp">Nombre del empleado</label>
+                <input type="password" class="form-control" id="txtNomEmp" placeholder="Nombre del empleado">
+                
+            </div>   
+            <div class="form-group col-md-4">
+                <label for="inputState">Supervisor</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Selecciona un supervisor</option>
+                    <option>sup1</option>
+                    <option>sup2</option>
+                    <option>sup3</option>
+                    <option>sup4</option>
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputState">Motivo</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Selecciona un Motivo</option>
+                    <option>Llamada cortada</option>
+                    <option>No transfiere a la encuesta</option>
+                    <option>Falta de respeto</option>
+                    <option>Otro</option>
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputZip">ID de verint o Whatsapp</label>
+                <input type="text" class="form-control" id="txtID">
+            </div>
+            <br><br><br>
+            <button type="submit" class="btn btn-primary">Generar Correo</button>
+            </div>
+            
+        </form>
+    </div>      
+</body>
+</html>
